...
                android:text="@string/employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnScustomer" />
        </RadioGroup>

        <TextView
            android:id="@+id/AlreadyUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2571AE"
            android:backgroundTint="#268A80"
            android:clickable="true"
            android:linksClickable="false"
...
