...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/branchServiceSpinner"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:background="#FBF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branchNameSpinner" />

    <Spinner
        android:id="@+id/branchNameSpinner"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
...
