<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252922"
    android:orientation="vertical"
    tools:context=".CustomerActivities.CustomerRatingBranchesActivity">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Branch Ratings"
        android:textColor="#00BCD4"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Long click on a branch to leave a rating."
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/backToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:text="Click Here to Return to The Home Screen" />

    <ListView
        android:id="@+id/listOfEmployees"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>